--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@sweetalert2/theme-bulma": "^5.0.16",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.2.0",
     "@thirdweb-dev/react": "^4",
     "@thirdweb-dev/sdk": "^4",
     "assert": "^2.0.0",
+    "axios": "^1.7.2",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.3.3",
     "browserify-zlib": "latest",
     "ethers": "^5",
+    "express": "^4.19.2",
     "http": "npm:http-browserify",
     "http-browserify": "latest",
     "https": "npm:https-browserify",
@@ -21,6 +25,7 @@
     "react-dom": "^18.2",
     "react-scripts": "^5.0.1",
     "stream": "^0.0.2",
+    "sweetalert2": "^11.11.0",
     "typescript": "^4.7.2",
     "url": "latest",
     "web-vitals": "^2.1.4",
